src/objects/ProjectActivity__c.object
<CustomObject>
    <description>Object for tracking Project Changes</description>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifiedBy__c</fullName>
        <label>ModifiedBy</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <label>ProjectId</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>ProjectActivities</relationshipLabel>
        <relationshipName>ProjectActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ProjectActivity</label>
    <nameField>
        <label>ProjectActivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectActivities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>